--- a/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
+++ b/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,9 @@
       "array([1.45737275, 1.45192754, 1.50224867, 1.45049116])\n",
       "array([1.16792262, 1.19920099, 1.54740016, 1.5135769 ])\n",
       "array([1.52520574, 1.52280734, 1.66170611, 1.54928673])\n",
-      "array([1.64994294, 1.68208177, 1.7017047 , 1.66435221])\n"
+      "array([1.64994294, 1.68208177, 1.7017047 , 1.66435221])\n",
+      "array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041])\n"
      ]
     }
    ],
@@ -1290,13 +1292,14 @@
     "                pprint(array)\n",
     "           \n",
     "    meanSingleAntigenForMouse[mouseName_idx] = np.mean(array)\n",
+    "pprint(meanSingleAntigenForMouse)\n",
     "                \n",
     "                \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1412,7 @@
     }
    ],
    "source": [
-    "flipWellMeans = np.flip(listof16061WellMeans) #flip for plotting increasing OD\n",
+    "flipWellMeans = np.flip(listof16061WellMeans) #flip for plotting increasing concentration based on OD\n",
     "pprint(flipWellMeans)"
    ]
   },
@@ -1508,24 +1511,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 269,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
-       "       1.67452041])"
-      ]
-     },
-     "execution_count": 269,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "meanSingleAntigenForMouse"
+    "#Still need to improve the curve fitting, but it is a start"
    ]
   },
   {
@@ -1589,7 +1578,7 @@
    "metadata": {},
    "source": [
     "## Iterate over every antigen\n",
-    "This is still very much in progress--not currently outputting outputting what I want. Goal is to output an array with a mean concentration value for each mouse for each antigen."
+    "This is still very much in progress--Goal is to output an array with a mean concentration value for each mouse for each antigen. The following cells are still my chicken scratch."
    ]
   },
   {
@@ -1614,6 +1603,219 @@
    ],
    "source": [
     "pprint(antigenIdx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n",
+      "array([], dtype=float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "antigenList = ['xkappa-biotin', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7',\n",
+    "        'xmouse-IgG','anti-HIS tag', '15731', '15742', '15750', '15878', '15946',\n",
+    "        '15960', 'Q411', '15974', '16061', 'FVM04', 'VIC122', 'Q206',\n",
+    "        'Q314', 'GFP-foldon']\n",
+    "spotname = 0\n",
+    "sizeofList = len(antigenList)\n",
+    "\n",
+    "while spotname < sizeofList :\n",
+    "    mouseList = ['Mouse 1', 'Mouse 2', 'Mouse 3', 'Mouse 4', 'Mouse 5', 'Mouse 6']\n",
+    "    meanSingleAntigenForMouse = np.zeros(len(mouseList))\n",
+    "    for mouseName_idx, mouseName in enumerate(mouseList):\n",
+    "        PlateID_array = np.array(['C' in plateInfo[i,0] for i in range(len(plateInfo))])\n",
+    "        mouseAndWellidx = np.logical_and(PlateID_array, plateInfo[:,1] == mouseName)\n",
+    "        counter =0\n",
+    "        for idx in range(len(mouseAndWellidx)):\n",
+    "            if mouseAndWellidx[idx] == True:\n",
+    "                if counter == 0:\n",
+    "                    array = ODwellbyantigen[idx, antigenIdx==spotname]\n",
+    "                    counter +=1\n",
+    "                else:\n",
+    "                    array = np.concatenate((array, ODwellbyantigen[idx, antigenIdx==spotname]),axis=0)\n",
+    "                    pprint(array)\n",
+    "    meanSingleAntigenForMouse[mouseName_idx] = np.mean(array)\n",
+    "    spotname += 1\n"
    ]
   },
   {
