--- a/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
+++ b/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
@@ -1606,8 +1606,373 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Initialize dictionary of antigen name corresponding to list containing mean concentrations for 6 mice"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'100': [50, 50, 50, 50, 50, 50],\n",
+      " '114': [50, 50, 50, 50, 50, 50],\n",
+      " '15731': [50, 50, 50, 50, 50, 50],\n",
+      " '15742': [50, 50, 50, 50, 50, 50],\n",
+      " '15750': [50, 50, 50, 50, 50, 50],\n",
+      " '15878': [50, 50, 50, 50, 50, 50],\n",
+      " '15946': [50, 50, 50, 50, 50, 50],\n",
+      " '15960': [50, 50, 50, 50, 50, 50],\n",
+      " '15974': [50, 50, 50, 50, 50, 50],\n",
+      " '16061': [50, 50, 50, 50, 50, 50],\n",
+      " 'FVM04': [50, 50, 50, 50, 50, 50],\n",
+      " 'GFP-foldon': [50, 50, 50, 50, 50, 50],\n",
+      " 'KZ52': [50, 50, 50, 50, 50, 50],\n",
+      " 'Q206': [50, 50, 50, 50, 50, 50],\n",
+      " 'Q314': [50, 50, 50, 50, 50, 50],\n",
+      " 'Q411': [50, 50, 50, 50, 50, 50],\n",
+      " 'VIC122': [50, 50, 50, 50, 50, 50],\n",
+      " 'anti-HIS tag': [50, 50, 50, 50, 50, 50],\n",
+      " 'c13C6': [50, 50, 50, 50, 50, 50],\n",
+      " 'c2G4': [50, 50, 50, 50, 50, 50],\n",
+      " 'c4G7': [50, 50, 50, 50, 50, 50],\n",
+      " 'xkappa-biotin': [50, 50, 50, 50, 50, 50],\n",
+      " 'xmouse-IgG': [50, 50, 50, 50, 50, 50]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "antigenList = ['xkappa-biotin', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7','xmouse-IgG','anti-HIS tag', '15731', '15742', '15750', '15878', '15946','15960', 'Q411', '15974', '16061', 'FVM04', 'VIC122', 'Q206','Q314', 'GFP-foldon']\n",
+    "concentrationResults = {i:[50,50,50,50,50,50] for i in antigenList}\n",
+    "\n",
+    "pprint(concentrationResults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(antigenList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define a function that takes antigen name (str) as the argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findMeanODs(antigen):\n",
+    "    mouseList = ['Mouse 1', 'Mouse 2', 'Mouse 3', 'Mouse 4', 'Mouse 5', 'Mouse 6']\n",
+    "    meanSingleAntigenForMouse = np.zeros(len(mouseList))\n",
+    "\n",
+    "    for mouseName_idx, mouseName in enumerate(mouseList):\n",
+    "        PlateID_array = np.array(['C' in plateInfo[i,0] for i in range(len(plateInfo))])\n",
+    "        mouseAndWellidx = np.logical_and(PlateID_array, plateInfo[:,1] == mouseName)\n",
+    "        counter =0\n",
+    "        for idx in range(len(mouseAndWellidx)):\n",
+    "            if mouseAndWellidx[idx] == True:\n",
+    "                if counter == 0:\n",
+    "                    array = ODwellbyantigen[idx, antigenIdx==antigen]\n",
+    "                    counter +=1\n",
+    "                else:\n",
+    "                    array = np.concatenate((array, ODwellbyantigen[idx, antigenIdx==antigen]),axis=0)\n",
+    "                    pprint(array)\n",
+    "        meanSingleAntigenForMouse[mouseName_idx] = np.mean(array)\n",
+    "    pprint(meanSingleAntigenForMouse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([1.5967797 , 1.59511597, 1.60671339, 1.71466466, 1.38157853,\n",
+      "       1.44164653, 1.48736801, 1.56529985, 1.50605912, 1.39792707])\n",
+      "array([1.473988  , 1.71933269, 1.55533473, 1.56317716, 1.43780321,\n",
+      "       1.46801839, 1.5761103 , 1.47791904, 1.49145637, 1.41384446])\n",
+      "array([1.46787027, 1.59124331, 1.56585622, 1.53481665, 1.42222563,\n",
+      "       1.55434303, 1.63507797, 1.57112889, 1.48922901, 1.46747446])\n",
+      "array([1.47055562, 1.51235291, 1.58673008, 1.43823709, 1.37374584,\n",
+      "       1.42551705, 1.48068722, 1.39983387, 1.50351912, 1.34144956])\n",
+      "array([1.57879002, 1.48425517, 1.57901388, 1.52674933, 1.30744304,\n",
+      "       1.51060554, 1.54697215, 1.53370614, 1.41775438, 1.31183339])\n",
+      "array([1.59108157, 1.52040932, 1.64919234, 1.80317542, 1.35730952,\n",
+      "       1.4965533 , 1.52679151, 1.46528042, 1.49000311, 1.31520543])\n",
+      "array([1.52931528, 1.51769843, 1.52992654, 1.45326284, 1.47971231,\n",
+      "       1.5215002 ])\n",
+      "array([1.45386378, 1.54574571, 1.4626992 , 1.58615411])\n",
+      "array([1.42565596, 1.37252841, 1.3549812 , 1.39352406])\n",
+      "array([1.45737275, 1.45192754, 1.50224867, 1.45049116])\n",
+      "array([1.16792262, 1.19920099, 1.54740016, 1.5135769 ])\n",
+      "array([1.52520574, 1.52280734, 1.66170611, 1.54928673])\n",
+      "array([1.64994294, 1.68208177, 1.7017047 , 1.66435221])\n",
+      "array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041])\n",
+      "array([1.60350246, 1.09401597, 1.41098834, 1.43772411])\n",
+      "array([1.46375175, 1.29614892, 1.58736068, 1.39242515])\n",
+      "array([1.55265033, 1.57286954, 1.6621581 , 1.27880087])\n",
+      "array([1.18213496, 1.1171662 , 1.50131038, 1.60110611])\n",
+      "array([1.45859464, 1.39716837, 1.50323802, 1.47550537])\n",
+      "array([1.69971936, 1.68277436, 1.79896506, 1.64262865])\n",
+      "array([1.38655772, 1.43492162, 1.51661971, 1.35042941, 1.4586266 ,\n",
+      "       1.70602186])\n",
+      "array([1.57199623, 1.25309327, 1.50906967, 1.55966105])\n",
+      "array([1.08012016, 1.1536641 , 1.14775771, 1.08022264])\n",
+      "array([1.74103282, 1.29785791, 1.41862149, 1.45270428])\n",
+      "array([1.41695695, 1.42512726, 2.10813652, 2.01897739])\n",
+      "array([1.47740448, 1.50795812, 1.46961955, 1.41157028])\n",
+      "array([1.90586849, 2.00129786, 2.12412955, 1.94177797])\n",
+      "array([1.47345505, 1.11544115, 1.47755412, 1.74229953, 1.46663811,\n",
+      "       1.99326847])\n",
+      "array([1.52690539, 1.40591158, 1.34289525, 1.21206984])\n",
+      "array([1.07073057, 1.04220759, 1.30521489, 1.11707772])\n",
+      "array([1.36978757, 1.17667156, 1.41384153, 1.31251703])\n",
+      "array([1.48358224, 1.11274132, 1.45852624, 1.385434  ])\n",
+      "array([1.41426195, 1.19877693, 1.51764222, 1.48923787])\n",
+      "array([1.4673326 , 1.29950338, 1.4288089 , 1.36168491])\n",
+      "array([1.37194551, 1.13380769, 1.31820442, 1.36007095, 1.40497974,\n",
+      "       1.38933245])\n",
+      "array([1.51152351, 1.10073568, 1.40786879, 1.49109964])\n",
+      "array([1.07371679, 1.09720559, 1.08325317, 1.05465722])\n",
+      "array([1.46456958, 1.2561367 , 1.45063623, 1.40560035])\n",
+      "array([1.64775588, 1.2428693 , 1.62123534, 1.62116297])\n",
+      "array([1.42353856, 1.2540753 , 1.50867805, 1.41324379])\n",
+      "array([1.69290391, 1.36284812, 1.6811589 , 1.54338388])\n",
+      "array([1.3778069 , 1.07720819, 1.39423572, 1.53325587, 1.39988392,\n",
+      "       1.5700737 ])\n",
+      "array([1.40352469, 1.12759438, 1.35711009, 1.13247372])\n",
+      "array([1.17720738, 1.05100709, 1.10441876, 1.08677273])\n",
+      "array([1.39114544, 1.30485237, 1.46020471, 1.07396036])\n",
+      "array([1.4373866 , 1.43409847, 1.43254472, 1.40951403])\n",
+      "array([1.47570941, 1.39783327, 1.45173719, 1.40206322])\n",
+      "array([1.39275688, 1.46879175, 1.43170143, 1.53693141])\n",
+      "array([1.25517572, 1.10485149, 1.30754072, 1.42838595, 1.43183577,\n",
+      "       1.45754537])\n",
+      "array([4.03120776, 4.01656527])\n",
+      "array([3.33726129, 3.48920995])\n",
+      "array([4.18397208, 3.75518708])\n",
+      "array([3.33574748, 3.72731102])\n",
+      "array([3.38433912, 3.07203228])\n",
+      "array([3.54454979, 2.88561061])\n",
+      "array([4.02388652, 3.41323562, 3.96957958, 3.53152925, 3.2281857 ,\n",
+      "       3.2150802 ])\n",
+      "array([2.68998854, 2.14285153, 2.11146929, 3.80627081, 4.34546   ,\n",
+      "       3.56227594])\n",
+      "array([1.32362986, 1.05041595, 1.07046128, 1.33573998, 1.08174756,\n",
+      "       1.07148083])\n",
+      "array([3.98929436, 3.09963008, 2.37784577, 2.4907305 , 2.21669455,\n",
+      "       2.30915653])\n",
+      "array([2.62979898, 2.41688322, 2.18845787, 3.726999  , 2.91080852,\n",
+      "       2.45154535])\n",
+      "array([2.66109329, 2.5784573 , 1.71320228, 2.74604728, 1.47709326,\n",
+      "       1.54325966])\n",
+      "array([8.29333412, 2.66927278, 2.65149607, 3.5561491 , 3.69573742,\n",
+      "       3.02465136])\n",
+      "array([3.10971935, 1.15557924, 2.7472253 , 2.72074882, 2.11985884,\n",
+      "       3.98177347])\n",
+      "array([1.06499309, 1.13741489, 1.38096776, 1.42934272])\n",
+      "array([1.12804349, 1.3543501 , 1.19422655, 1.14668012])\n",
+      "array([1.4000393 , 1.19049091, 1.23623471, 1.25543229])\n",
+      "array([1.08534521, 1.06478647, 1.54009528, 1.37762228])\n",
+      "array([1.39460788, 1.22503984, 1.58695761, 1.5141496 ])\n",
+      "array([1.57021767, 1.29608422, 1.61005795, 1.66263057])\n",
+      "array([1.25317962, 1.20582506, 1.2705493 , 1.26696231, 1.43018873,\n",
+      "       1.5347476 ])\n",
+      "array([1.11928288, 1.26695282, 1.40939898, 1.3674403 ])\n",
+      "array([1.02394058, 1.04051013, 1.04670531, 1.05335407])\n",
+      "array([1.24881129, 1.28968553, 1.22021004, 1.31483505])\n",
+      "array([1.23930431, 1.30837647, 1.84855004, 1.67487268])\n",
+      "array([1.0781891 , 1.13936728, 1.34403952, 1.14374794])\n",
+      "array([1.63281555, 1.58454008, 1.6909708 , 1.37185833])\n",
+      "array([1.29076874, 1.04112752, 1.26838548, 1.51777587, 1.17633596,\n",
+      "       1.57004619])\n",
+      "array([1.2035232 , 1.08821991, 1.26096231, 1.28435986])\n",
+      "array([1.28726742, 1.07042546, 1.06283951, 1.13657168])\n",
+      "array([1.20995788, 1.1177907 , 1.36725592, 1.34039213])\n",
+      "array([1.10644214, 1.11685534, 1.41771032, 1.41232966])\n",
+      "array([1.19800395, 1.35495138, 1.46406564, 1.4284866 ])\n",
+      "array([1.40889849, 1.31904615, 1.42986692, 1.3852226 ])\n",
+      "array([1.20926632, 1.13927602, 1.25884916, 1.26333436, 1.36137689,\n",
+      "       1.38575854])\n",
+      "array([1.4001554 , 1.15091855, 1.2507297 , 1.20996641])\n",
+      "array([1.01793832, 1.0294291 , 1.02440505, 1.04745289])\n",
+      "array([1.59587137, 1.26896174, 1.60619632, 1.39875079])\n",
+      "array([1.24164623, 1.44127938, 1.97497357, 1.91561864])\n",
+      "array([1.35145958, 1.37799059, 1.36033145, 1.45658736])\n",
+      "array([1.80765052, 1.87469001, 1.55074251, 1.96024038])\n",
+      "array([1.25294251, 1.02980634, 1.46744505, 1.64337945, 1.38659224,\n",
+      "       1.79833085])\n",
+      "array([1.04575011, 1.0759728 , 1.09092659, 1.07715465])\n",
+      "array([1.04425304, 1.03557267, 1.08869346, 1.04548724])\n",
+      "array([1.07606721, 1.02795982, 1.09843039, 1.06600139])\n",
+      "array([1.09247384, 1.08652923, 1.11248254, 1.04379045])\n",
+      "array([1.0657965 , 1.06086734, 1.08896656, 1.09168   ])\n",
+      "array([1.15456498, 1.37448427, 1.24452038, 1.27298917])\n",
+      "array([1.07245104, 1.0535016 , 1.0671147 , 1.08381902, 1.0768276 ,\n",
+      "       1.2616397 ])\n",
+      "array([1.28722102, 1.10832911, 1.12006345, 1.08011514])\n",
+      "array([1.08046543, 1.1345574 , 1.06931458, 1.05798788])\n",
+      "array([1.23236329, 1.09449066, 1.04218476, 1.09594628])\n",
+      "array([1.24652729, 1.18590253, 1.21305024, 1.36085248])\n",
+      "array([1.10375796, 1.07825168, 1.06552185, 1.24361553])\n",
+      "array([1.54608445, 1.20696995, 1.57489069, 1.28260151])\n",
+      "array([1.14893218, 1.08558132, 1.11624625, 1.25158313, 1.12278676,\n",
+      "       1.40263665])\n",
+      "array([1.43352103, 1.32484854, 1.34470318, 1.34121336])\n",
+      "array([1.12333623, 1.17450332, 1.12934504, 1.08545506])\n",
+      "array([1.10690544, 1.13221416, 1.23962513, 1.13925569])\n",
+      "array([1.31555913, 1.31721439, 1.28497866, 1.1394011 ])\n",
+      "array([1.14282088, 1.10350183, 1.23271711, 1.273551  ])\n",
+      "array([1.38162815, 1.40913136, 1.42714624, 1.30639514])\n",
+      "array([1.36107153, 1.12815991, 1.1545001 , 1.26428832, 1.1881477 ,\n",
+      "       1.38107522])\n",
+      "array([1.09440739, 1.19412683, 1.27225564, 1.17283455])\n",
+      "array([1.08802751, 1.09497397, 1.07236359, 1.07600226])\n",
+      "array([1.40094421, 1.20856279, 1.34790783, 1.31967288])\n",
+      "array([1.29639428, 1.47937411, 1.37430344, 1.56364062])\n",
+      "array([1.29991856, 1.12207974, 1.49420884, 1.2716821 ])\n",
+      "array([1.7630882 , 1.86687881, 1.01511724, 1.03554505])\n",
+      "array([1.1834061 , 1.08284183, 1.31927193, 1.42842811, 1.29697231,\n",
+      "       1.42015732])\n",
+      "array([1.37440099, 1.57147745, 1.71737541, 1.52685902])\n",
+      "array([1.05835005, 1.05288046, 1.03552002, 1.04999659])\n",
+      "array([1.535295  , 1.83496398, 2.14975275, 1.66686678])\n",
+      "array([2.69733505, 2.40672081, 2.47142759, 2.33975007])\n",
+      "array([1.57407587, 1.36637035, 1.52994089, 1.44749084])\n",
+      "array([2.5276484 , 2.56151974, 2.20102551, 2.52120709])\n",
+      "array([1.54752822, 1.04918678, 1.79671963, 2.47880838, 1.47946949,\n",
+      "       2.45285019])\n",
+      "array([1.30946194, 1.50644604, 1.42460943, 1.42274659])\n",
+      "array([1.14245103, 1.25347355, 1.35800904, 1.17984525])\n",
+      "array([1.10753605, 1.27979204, 1.33398174, 1.24547148])\n",
+      "array([1.2974516 , 1.33749766, 1.43946347, 1.46060281])\n",
+      "array([1.41257693, 1.33071505, 1.43893976, 1.41448352])\n",
+      "array([1.62762733, 1.65687623, 1.56513011, 1.68937181])\n",
+      "array([1.415816  , 1.23344472, 1.24169533, 1.38375389, 1.39917882,\n",
+      "       1.63475137])\n",
+      "array([1.37895503, 1.48237973, 1.64637114, 1.57624508])\n",
+      "array([1.05051189, 1.12255932, 1.08004805, 1.10213713])\n",
+      "array([1.25904553, 1.11439829, 1.11858631, 1.28501168])\n",
+      "array([1.2679095 , 1.31227558, 1.37258563, 1.35210377])\n",
+      "array([1.16090211, 1.10735637, 1.28206848, 1.25856616])\n",
+      "array([1.66005835, 1.56503988, 1.69175195, 1.604867  ])\n",
+      "array([1.52098775, 1.0888141 , 1.19426045, 1.32621862, 1.20222328,\n",
+      "       1.63042929])\n",
+      "array([1.2658443 , 1.39234676, 1.49765637, 1.36743827])\n",
+      "array([1.13580881, 1.1754704 , 1.09340575, 1.0691044 ])\n",
+      "array([1.1124458 , 1.08558083, 1.14314724, 1.11692388])\n",
+      "array([1.34432212, 1.23448049, 1.29156421, 1.25479022])\n",
+      "array([1.12758856, 1.12834915, 1.23798834, 1.25251177])\n",
+      "array([1.44698666, 1.36739362, 1.47773326, 1.36962398])\n",
+      "array([1.38082142, 1.11844734, 1.11452444, 1.28128926, 1.18660945,\n",
+      "       1.41543438])\n",
+      "array([1.0431924 , 1.04555738, 1.05267918, 1.03409124])\n",
+      "array([1.08329827, 1.07289654, 1.03745525, 1.03373883])\n",
+      "array([1.05852519, 1.03399173, 1.0700993 , 1.05160333])\n",
+      "array([1.0725184 , 1.05931764, 1.06915327, 1.05512002])\n",
+      "array([1.09595861, 1.07524078, 1.30566948, 1.2008255 ])\n",
+      "array([1.27710783, 1.09184626, 1.24143347, 1.08588811])\n",
+      "array([1.04388005, 1.05684722, 1.05355489, 1.06402733, 1.16942359,\n",
+      "       1.17406892])\n",
+      "array([1.88411929, 1.89231931])\n",
+      "array([1.00436775, 0.99861217])\n",
+      "array([1.04868393, 1.06868377])\n",
+      "array([1.00013093, 0.99930711])\n",
+      "array([1.00008971, 1.00170944])\n",
+      "array([1.00136274, 1.00003497])\n",
+      "array([1.8882193 , 1.00148996, 1.05868385, 0.99971902, 1.00089957,\n",
+      "       1.00069885])\n",
+      "{'100': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '114': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '15731': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '15742': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '15750': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '15878': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '15946': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '15960': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '15974': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " '16061': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'FVM04': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'GFP-foldon': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'KZ52': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'Q206': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'Q314': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'Q411': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'VIC122': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'anti-HIS tag': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'c13C6': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'c2G4': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'c4G7': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'xkappa-biotin': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041]),\n",
+      " 'xmouse-IgG': array([1.5121157 , 1.38667241, 1.46551003, 1.35702517, 1.56475148,\n",
+      "       1.67452041])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for antigen in concentrationResults:\n",
+    "    findMeanODs(antigen)\n",
+    "    concentrationResults.update({antigen:meanSingleAntigenForMouse})\n",
+    "pprint(concentrationResults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -1817,6 +2182,13 @@
     "    meanSingleAntigenForMouse[mouseName_idx] = np.mean(array)\n",
     "    spotname += 1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
