--- a/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
+++ b/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
@@ -1094,9 +1094,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:serology]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-serology-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1108,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
