--- a/notebooks_interpretation/FluPlateinterpret.ipynb
+++ b/notebooks_interpretation/FluPlateinterpret.ipynb
@@ -1013,14 +1013,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-169-4a0db459b974>:5: RuntimeWarning: invalid value encountered in power\n",
+      "<ipython-input-171-4a0db459b974>:5: RuntimeWarning: invalid value encountered in power\n",
       "  return ((A-D)/(1.0+((x/C)**(B))) + D)\n"
      ]
     },
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1108,37 +1108,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([1.6325937 , 1.24057201, 1.12274793, 1.04168365, 1.00825405,\n",
-      "       1.0023307 , 0.99973903, 1.03495   ]),\n",
-      " array([1.18284141, 1.05365641, 1.01095905, 0.99956109, 0.99464464,\n",
-      "       0.99662646, 0.99682175, 0.99788761]),\n",
-      " array([1.22759098, 1.08346679, 1.01743137, 1.00075848, 0.99729104,\n",
-      "       0.99765584, 0.99699758, 0.99808423]),\n",
-      " array([1.04459296, 1.00691867, 1.00022285, 0.99342826, 0.99325535,\n",
-      "       0.99510629, 0.9959808 , 0.99560323]),\n",
-      " array([2.03240213, 1.31247131, 1.17488615, 1.06124772, 1.00449509,\n",
-      "       0.99815258, 0.99566044, 0.99736447]),\n",
-      " array([2.03240213, 1.31247131, 1.17488615, 1.06124772, 1.00449509,\n",
-      "       0.99815258, 0.99566044, 0.99736447])]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-163-61c809bb5163>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallMeans\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mallConcentrations\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgetConcentration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallMeans\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallConcentrations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-160-64f0c99ab21f>\u001b[0m in \u001b[0;36mgetConcentration\u001b[0;34m(ODs, params)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mgetConcentration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mODs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mODs\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#interpolate into fitted curve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'float'"
+      "array([[4.20112791, 3.45099439, 3.19519064, 3.00611279, 2.92424567,\n",
+      "        2.90947034, 2.90297889, 2.98982278],\n",
+      "       [3.32811276, 3.03483981, 2.93096515, 2.9025326 , 2.89017063,\n",
+      "        2.89516094, 2.89565217, 2.89833149],\n",
+      "       [3.42373784, 3.10511108, 2.94697325, 2.9055343 , 2.89683219,\n",
+      "        2.89774911, 2.89609435, 2.89882545],\n",
+      "       [3.01312096, 2.92092203, 2.90419199, 2.88710287, 2.88666649,\n",
+      "        2.89133395, 2.89353623, 2.89258562],\n",
+      "       [4.88195802, 3.5984391 , 3.31082729, 3.05290104, 2.91487904,\n",
+      "        2.89899714, 2.89272969, 2.8970168 ],\n",
+      "       [4.88195802, 3.5984391 , 3.31082729, 3.05290104, 2.91487904,\n",
+      "        2.89899714, 2.89272969, 2.8970168 ]])\n"
      ]
     }
    ],
@@ -1167,10 +1155,62 @@
     "mHAFluBIIMSDay0=np.mean(HAFluBIMSDay0,axis=1)\n",
     "\n",
     "allMeans=[mFluVaccineMSDay0,mH1HAMSDay0, mH3HAMSDay0,mH7HAMSDay0,mHAFluBIMSDay0,mHAFluBIIMSDay0]\n",
-    "pprint(allMeans)\n",
+    "\n",
+    "allMeans = np.asarray(allMeans)\n",
     "\n",
     "allConcentrations=getConcentration(allMeans,params)\n",
-    "pprint(allConcentrations)\n"
+    "pprint(allConcentrations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiply by dilution factor to get the corrected concentration values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([4201.12790509, 3328.11275743, 3423.73783546, 3013.12095566,\n",
+      "       4881.9580213 , 4881.9580213 ])\n"
+     ]
+    }
+   ],
+   "source": [
+    "initialConcentration=allConcentrations[:,0] #All antigens at the initial concentration for Day 0 from MS serum\n",
+    "correctedConcentration=initialConcentration*1000 #in ug/mL\n",
+    "pprint(correctedConcentration) #in ug/mL\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Flu vaccine 2018-2019': [4201.127905092634],\n",
+      " 'H1 HA': [3328.1127574250822],\n",
+      " 'H3 HA': [3423.737835461282],\n",
+      " 'H7 HA': [3013.120955660658],\n",
+      " 'HA FluB I': [4881.958021304888],\n",
+      " 'HA FluB II': [4881.958021304888]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "correctedConcentrationResult = {'Flu vaccine 2018-2019':[correctedConcentration[0]],'H1 HA':[correctedConcentration[1]], 'H3 HA':[correctedConcentration[2]],'H7 HA':[correctedConcentration[3]] ,'HA FluB I':[correctedConcentration[4]], 'HA FluB II':[correctedConcentration[5]]}\n",
+    "pprint(correctedConcentrationResult)\n",
+    "#df = pd.DataFrame(data=correctedConcentrationResult)"
    ]
   },
   {
